src/component/WishlistSlider/WishlistSlider.style.scss
.wishlistSliderContainer {
  .VueProductSlider {
    padding: 0 20px;
    font-weight: var(--fw-regular);

    &-Container {
      width: 100%;
      font-size: 16px;
      margin: 50px 0px;
      font-weight: var(--fw-demi);

      @include mobile() {
        // width: 96.005vw;
        // margin: 0px 0px 50px 0px;
      }
      @media (max-width: 1024px) and (min-width: 768px) {
        padding-left: 30px;
      }
    }
    @include desktop {
      &-Link {
        height: 278px;
      }
    }

    &-HeaderContainer {
      margin-top: 10px;
      margin-bottom: 15px;
      display: flex;
      justify-content: space-between;
      h1 {
        text-transform: uppercase;
      }
      @media (min-width: 1025px) {
        h1 {
          font-size: 18px;
          font-weight: 500;
          letter-spacing: 2px;
          line-height: 25px;
        }
      }
      @media (max-width: 760px) {
        display: block;
        text-align: center;
        h1 {
          font-size: 15px;
          margin-bottom: 0px;
          margin-top: 10px;
          text-align: center;
        }
      }

      @media (max-width: 1024px) and (min-width: 768px) {
        h1 {
          font-size: 18px;
          font-weight: 500;
          letter-spacing: 2px;
          line-height: 25px;
          margin-bottom: 0px;
        }
      }
    }

    &-ViewAllBtn {
      height: 40px;
      width: 100px;
      display: grid;
      cursor: pointer;
      border-radius: 11px;
      place-items: center;
      background-color: #f6f6f6;

      span {
        font-size: 13px;
        font-weight: var(--fw-demi);
      }
    }

    &-SliderContainer {
      width: 100%;
      overflow: auto;
      white-space: nowrap;
      &_isHome {
        &::-webkit-scrollbar {
          display: none;
        }
      }
      padding-bottom: 25px !important;

      @media (max-width: 1024px) {
        width: 99vw;
      }
    }

    &-SliderContainer::-webkit-scrollbar {
      width: 6px;
      height: 6px;
    }

    &-SliderContainer::-webkit-scrollbar-thumb {
      background: #585757;
    }

    &-SliderContainer::-webkit-scrollbar-track {
      background: #dcdcdc;
    }

    &-VueProductContainer {
      width: 245.39px;
      height: 363.66px;
      position: relative;
      margin-right: 7.92px;
      display: inline-block;
      vertical-align: top;
      &:nth-last-child(2) {
        margin-right: 0;
      }
      &_isArabic {
        &:nth-child(2) {
          margin-right: 0;
        }
      }

      @media (max-width: 1024px) {
        width: 220.08px;
      }

      @media (max-width: 411px) {
        height: auto;
        width: 154.31px;
      }

      #brandName {
        display: block;
        font-size: 14px;
        font-weight: var(--fw-demi);
        margin: 8.23px 0px 5.58px 0px;
        text-align: left;
        text-overflow: ellipsis;
        white-space: nowrap;
        overflow: hidden;
      }

      #productName {
        width: 100%;
        display: block;
        font-size: 13px;
        color: #4a4a4a;
        overflow: hidden;
        white-space: nowrap;
        // margin-bottom: 4.5px;
        text-overflow: ellipsis;
        font-weight: var(--fw-regular);
        text-align: left;
      }

      #price {
        display: block;
        font-size: 14px;
        font-weight: var(--fw-bold);
      }
      .WishlistIcon {
        &-Icon {
          width: 2rem;
          height: 2rem;
          background-size: 2rem;
          left: 3px;
          top: 7px;
        }

        @include tablet {
          width: 28px;
          height: 28px;
          &-Icon {
            width: 20px;
            height: 20px;
            background-size: 20px;
            left: -1px;
            top: 5px;
          }
        }
        @include mobile {
          width: 28px;
          height: 28px;
          &-Icon {
            width: 20px;
            height: 20px;
            background-size: 20px;
            left: -1px;
            top: 5px;
          }
        }
      }
    }

    &-VueProductImage {
      width: 100%;
      height: 80.33%;
    }

    &-VueIsNewTag {
      width: 35px;
      height: 20px;
      display: flex;
      align-items: center;
      justify-content: center;
      background-color: #c8b581;
      border-radius: 0 10px 10px 0;

      left: 0;
      top: 12px;
      position: absolute;

      span {
        font-size: 11px;
        color: #ffffff;
        line-height: 13px;
        font-weight: var(--fw-medium);
      }
    }

    &-SpecialPriceCon {
      display: block;
    }

    &-Del {
      display: inline-block;

      #price {
        margin-right: 10px;
        font-weight: var(--fw-medium);
      }
    }

    &-PriceWrapper {
      display: inline-block;
      font-size: 14px;

      span {
        color: #D12228;
        font-weight: var(--fw-bold);
        @media (max-width: 411px) {
          font-size: 12px;
        }
      }
    }
  }
  #ScrollWrapper.active {
    cursor: grabbing;
    cursor: -webkit-grabbing;
    .VueProductSlider {
      cursor: grabbing;
      cursor: -webkit-grabbing;
      &-VueProductContainer {
        cursor: grabbing;
        cursor: -webkit-grabbing;
        &-a {
          cursor: grabbing;
          cursor: -webkit-grabbing;
        }
      }
      &-VueProductImage {
        cursor: grabbing;
        cursor: -webkit-grabbing;
      }
    }
  }

  .Outer {
    width: 29.444vw;
    overflow-x: auto;
    scroll-behavior: auto;
    margin: 60px auto 0 auto;
    cursor: grabbing;
    cursor: -webkit-grabbing;
    @include mobile {
      display: none;
    }
    &_Hidden {
      display: none;
    }
    &::-webkit-scrollbar {
      height: 3px;

      &:hover {
        cursor: pointer;
      }
      // @include mobile {
      //   display: none;
      // }
    }
    &::-webkit-scrollbar-thumb {
      background: #000000;
      border-radius: 3px;
    }
    &::-webkit-scrollbar-track {
      background: #e9e9e9;
    }
    &-Inner {
      height: 1px;
    }
  }

  .SliderHelper {
    &_isHome {
      display: none;
      @include tablet {
        width: 30px;
        display: inline-block;
      }
      @include mobile {
        width: 10px;
        display: inline-block;
      }
    }
  }
}

